# hevm

./: .gitignore  .gitmodules  .hlint.yaml  404.html  CHANGELOG.md  CNAME  COPYRIGHT  Makefile  README.md  a.sol  abiencode.html  architecture.html  architecture.md  common-options.html  controlling-the-unit-testing-environment.html  convert_trace_to_json.sh  create.sol-nodel  dapp-test.html  diff  ds-test-tutorial.html  equivalence-checking-tutorial.html  equivalence.html  exec.html  flake.nix  flatten.html  for-hevm-developers.html  fourmolu.yaml  funding.json  getting-started.html  hevm.cabal  hie.yaml  index.html  install.html  limitations-and-workarounds.html  notes.md  out.txt  overlay.nix  overview.html  print.html  readme.md  (+15 more)
.github/scripts/: install-libff.sh  install-libsecp256k1.sh  libff.patch  windows-ghc-toolchain.cmake
.github/workflows/: bitwuzla-linux.yml  bitwuzla-windows.yml  build.yml  check-dependencies.yml  publish-docs.yml  release.yml
bench/: bench-perf.hs  bench.hs
bench/contracts/: deposit.sol  erc20.sol
cli/: cli.hs
code_examples/: contract-symb-1.sol  contract3.sol
doc/: .gitignore  .prettierignore  .prettierrc.js  book.toml  cspell.json  package-lock.json  package.json  readme.md
doc/src/: SUMMARY.md  abiencode.md  architecture.md  chapter_1.md  common-options.md  controlling-the-unit-testing-environment.md  dapp-test.md  ds-test-tutorial.md  dstest-tutorial.md  equivalence-checking-tutorial.md  equivalence-checking.md  equivalence.md  exec.md  flatten.md  for-hevm-developers.md  getting-started.md  install.md  limitations-and-workarounds.md  overview.md  rlp.md  std-test-tutorial.md  strip-metadata.md  symbolic-execution-tutorial.md  symbolic.md  test.md  using-the-visual-debugger.md  when-to-use.md
doc/src/code_examples/: contract-symb-1.sol  contract-symb-2.sol  contract-symb-3.sol  contract1.sol  contract2.sol  create1.sol  create2.sol
doc/theme/: highlight.js  theme.js
ethjet/: blake2.c  ethjet-ff.cc  ethjet.c
ethjet/bn256/: bn256.c  constants.c  constants.h  curve.c  curve.h  gfp12.c  gfp12.h  gfp2.c  gfp2.h  gfp6.c  gfp6.h  optate.c  optate.h  twist.c  twist.h  types.h
hevm-cli/: hevm-cli.hs
nix/: bitwuzla.nix  libff.nix  libsecp256k1.nix
nix/hevm-tests/: default.nix  yul-equivalence.nix
scripts/: upload-haskell-package
src/: EVM.hs
src/EVM/: ABI.hs  Assembler.hs  CSE.hs  CheatsTH.hs  Concrete.hs  Dapp.hs  Debug.hs  Demand.hs  Dev.hs  Effects.hs  Exec.hs  Expr.hs  Facts.hs  FeeSchedule.hs  Fetch.hs  Flatten.hs  Format.hs  Futamura.hs  Fuzz.hs  Hexdump.hs  Keccak.hs  Op.hs  Opcodes.hs  Patricia.hs  Precompiled.hs  Props.hs  RLP.hs  SMT.hs  Sign.hs  Solidity.hs  Solvers.hs  Stepper.hs  StorageLayout.hs  SymExec.hs  TTY.hs  TTYCenteredList.hs  Tracing.hs  Transaction.hs  Traversals.hs  Types.hs  (+1 more)
src/EVM/Facts/: Git.hs
src/EVM/Props/: SMT.hs  SMT2.hs  Solvers.hs
src/Props/: Solvers.hs
src/hevm/: .gitignore  CHANGELOG.md  hevm.cabal
src/hevm/hevm-cli/: hevm-cli.hs
src/hevm/src/: EVM.hs
src/hevm/src/EVM/: ABI.hs  CSE.hs  Concrete.hs  Dapp.hs  Debug.hs  Dev.hs  Exec.hs  Expr.hs  Facts.hs  Fetch.hs  Format.hs  Keccak.hs  Op.hs  Precompiled.hs  SMT.hs  Solidity.hs  SymExec.hs  TTY.hs  Transaction.hs  Traversals.hs  Types.hs  UnitTest.hs  VMTest.hs
src/hevm/test/: rpc.hs  test.hs
src/hevm/test/EVM/: TestUtils.hs
src/hevm/test/contracts/fail/: cheatCodes.sol  dsProveFail.sol  invariantFail.sol
src/hevm/test/contracts/lib/: erc20.sol
src/hevm/test/contracts/pass/: abstract.sol  cheatCodes.sol  constantinople.sol  dsProvePass.sol  invariants.sol  rpc.sol
test/: BlockchainTests.hs  CliTests.hs  clitest.hs  rpc.hs  test.hs
test/EVM/: TestUtils.hs  Tracing.hs
test/EVM/Test/: BlockchainTests.hs  FuzzSymExec.hs  Tracing.hs  Utils.hs
test/contracts/fail/: 10_BadVault.sol  assertEq.sol  bad-cheatcode.sol  cheatCodes.sol  check-prefix.sol  dsProveFail.sol  keccak-preimage-constructor.sol  keccak-preimage-setup.sol  keccak-wrong-preimage.sol  rpc-test-mock.json  rpc-test.sol  should-fail.sol  symbolicFail.sol  trivial.sol
test/contracts/pass/: abstract.sol  cheatCodeErrors.sol  cheatCodes.sol  cheatCodesFork.sol  constantinople.sol  constantinople_min.sol  dsProvePass.sol  invariants.sol  loops.sol  no-overapprox-delegatecall.sol  no-overapprox-staticcall.sol  nonce-issues.sol  only-deployed-contracts.sol  requireEmpty.sol  requireString.sol  revertEmpty.sol  revertString.sol  rpc.sol  transfer.sol  trivial.sol  unwind.sol
test/scripts/: convert_trace_to_json.sh
tools/: concat-mocked-json.py
